# ncs_v3.3.1_nrf52840

./: .gitignore  build.py  build.sh  env.sh  requirements.txt  setup.sh  west.yml
.mrs/: v3.3.1-apps.mrs-workspace
apps/rid0/: CMakeLists.txt  prj.conf
apps/rid0/boards/: README.md  nrf52840dk_nrf52840.overlay
apps/rid0/patches/: 0001-bt-enable-log.patch  README.md
apps/rid0/src/: bluetooth.c  central.c  common.c  common.h  main.c  mcumgr.c  uart.c
apps/rid0/sysbuild/: CMakeLists.txt  mcuboot.conf  nrf52840dk_nrf52840_mcuboot.overlay
